# NEDAS

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.grid.md  README.md  RELEASE_NOTES.md  calc_scale_component.py  constants.py  conversion.py  diag_util.py  environment.yml  fft_lib.py  gen_reference_grid.py  grid_util.py  io_util.py  job_submit.sh  log.py  netcdf_lib.py  parallel.py  plot_perturb_diag.py  plot_state.py  pyproject.toml  requirements.txt  run_cycle.sh  run_diag.sh  run_forecast.sh  run_perturb.sh  run_perturb2.sh  setup.py  tach.toml  test_run.py  tutorial.ipynb  util.sh
NEDAS/: __init__.py  __main__.py
assim_tools/: __init__.py  alignment.py  analysis.py  analysis_scheme.py  basic_io.py  batch_assim.py  bin2nc.py  common.py  covariance.py  forecast.py  inflation.py  io.py  localization.py  log.py  logging.py  multiscale.py  netcdf.py  obs.py  packing.py  parallel.py  prepare_mask.py  prepare_state.py  registry.py  serial_assim.py  state.py  state_def.py  transpose.py  update.py
config/: __init__.py  config.py  constants.py  default.yml  defaults  defaults.local  nextsim_testcase  obs_def  parse_config.py  qg_testcase  state_def  topaz5_testcase  vort2d  vort2d_testcase
dataset/: ECMWF.py  ERA5.py  README.md  dataset_config.py  lorenz96.py
diag/: README  __init__.py  calc_error_spread.py  calc_scale_component.py  calc_scale_component_spread_timeseries.py  calc_spectrum_deform.py  calc_spectrum_si.py  calc_spectrum_wind.py  graphic.py  make_uniform_grid.py  plot_ens_sprd.py  plot_err_ts.py  plot_obs_seq.py  plot_scale_component.py  plot_spectrum.py  plot_state.py  process_nextsim_state.py  process_state.py  scale_util.py  state_bin2nc.py  view.html  view_ensemble.html
docs/: requirements.txt
graphic_tools/: __init__.py
grid/: README  README.md  __init__.py  converter.py  define_grid.py  gen_reference_grid.py  grid.py  grid_1d.py  grid_util.py  io.py  io_netcdf.py  irregular_grid_interpolator.py  multiscale.py  plot_mesh.py  transform_vectors.py  util.py
icbc/: add_pert.py  process_ERA5.ipynb  process_ERA5.py
models/: README.md  model_config.py
perturb/: __init__.py  calc_pert_param.py  param.sh  random_displacement.py  random_field.py  random_perturb.py  random_pres_wind_perturb.py
perturbation/: README.md  assemble_pert.py  calc_pert_param.py  calc_spectrum.py  fig_err_spec.py  fig_err_spectrum.py  fig_err_spectrum_multi.py  main_perturbation.F90  module_random_field.F90  namelist.sh  param.sh  plot_correlation.py  plot_spectrum.py  pseudo2d.nml  run_step1.sh  run_step2.sh  test.py
scripts/: __init__.py  analysis.py  assimilate.py  assimiltate.py  bin2nc.py  dahu_submit_job.sh  diag.py  diagnose.py  ensemble_forecast.py  generate_init_ensemble.py  init_config.py  job_submit.sh  jstat  module_assim.py  module_assim.sh  perturb.py  postprocess.py  prepare_forcing.py  prepare_mask.py  util.sh  (+12 more)
(+768 files in other folders)
